--- a/server/dashboard/templates/dashboard/upload.html
+++ b/server/dashboard/templates/dashboard/upload.html
@@ -6,23 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subir Archivos - PA vs SV</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'liderman-red': '#D31332',
-                        'liderman-blue': '#00AEEF',
-                        'liderman-gray': '#333333',
-                    },
-                    fontFamily: {
-                        sans: ['Roboto', 'system-ui', 'sans-serif'],
-                    },
-                },
-            },
-        }
-    </script>
+    <link rel="stylesheet" href="{% static 'dashboard/vendor/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/utilities.css' %}">
     <link rel="stylesheet" href="{% static 'dashboard/liderman_theme.css' %}">
 </head>
 
